	* gm2/patches/gcc/trunc/04-patches:  rebuilt.
	* gm2/patches/gcc/trunc/05-patches:  rebuilt.
	* gm2/patches/gcc/trunc/06-patches:  rebuilt.
	* gm2/patches/gcc/trunc/07-patches:  rebuilt.
	* gm2/patches/gcc/trunc/08-patches:  rebuilt.
	* gm2/patches/gcc/trunc/09-patches:  rebuilt.
	* gm2/patches/gcc/trunc/10-patches:  rebuilt.
	* testsuite/gm2/pim/run/pass/testaddr2.mod:  reformatted.

2018-07-10      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/ObjectFiles.def:  New file.
	* gm2/gm2-compiler/ObjectFiles.mod:  New file.
	* gm2/Make-lang.in:  added ObjectFiles to be built and linked
	into the compiler and tools.
	* gm2/gm2-compiler/gm2lcc.mod:  use ObjectFiles to remember each
	  object file so duplicates are not accidentally linked both in
	the Modula-2 link and command line list of objects.  Much code
	  was tidied up.
	* gm2/gm2-libs-ch/wrapc.c:  (fileinode) New function.
	* gm2/gm2-libs/libc.def:  corrected dates.
	* gm2/gm2-libs/wrapc.def:  (fileinode) New procedure function.
	* libgm2/libpim/wrapc.c:  (fileinode) New function.  Tidied up
	  formatting.

2018-07-07      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/bnf/gm2l.bnf:  import Verbose and use.  (RegisterImport)
          reformatted.  (ScanSources) display the module name if Verbose.
          (ScanArgs) handle long options and also concatenated arguments.
	  (-I, --verbose, --M2RTS).
	* gm2/gm2-compiler/M2DriverOptions.mod:  (CppArgument)  New procedure
	  function.  (ScanCppArgs) reformatted and also call CppArgument.
	* gm2/gm2-compiler/M2Options.mod:  updated dates.
	* gm2/gm2-compiler/M2Preprocess.mod:  reformatted and changed some of the
	  Verbose output.
	* gm2/gm2-libs-ch/getopt.c:  implement long options.
	* gm2/gm2-libs/GetOpt.def:  provide access to the long options in getopt.
	* gm2/gm2-libs/GetOpt.mod:  implement long option procedures necessary for getopt.
	* gm2/gm2-libs/Storage.def:  updated dates.